# sonic-pins

./: AGENTS.md  MODULE.bazel  pins_infra_deps.bzl
.github/workflows/: fourward-dvaas.yml
dvaas/portable_pins_backend/: BUILD.bazel  README.md  portable_pins_backend.cc  portable_pins_backend_test.cc
fourward/: AGENTS.md  BUILD.bazel  README.md  dataplane.proto  dvaas_step_test.cc  fake_gnmi_service.h  fake_gnmi_service_test.cc  fourward_backend.cc  fourward_backend.h  fourward_dataplane_validation_backend.cc  fourward_dataplane_validation_backend.h  fourward_dvaas_test.cc  fourward_mirror_testbed.cc  fourward_mirror_testbed.h  fourward_oracle.cc  fourward_oracle.h  fourward_oracle_e2e_test.cc  fourward_oracle_test.cc  fourward_pins_mirror_testbed.cc  fourward_pins_mirror_testbed.h  fourward_pins_mirror_testbed_test.cc  fourward_pins_switch.cc  fourward_pins_switch.h  fourward_pins_switch_basic_test.cc  fourward_pins_switch_port_test.cc  fourward_pins_switch_test.cc  fourward_server.cc  fourward_server.h  fourward_server_test.cc  fourward_switch.cc  fourward_switch.h  fourward_switch_test.cc  gnmi_diag.cc  inject_test.cc  packet_bridge.cc  packet_bridge.h  packet_bridge_test.cc  runfiles.h  test_util.h  trace_conversion.cc  (+7 more)
fourward/designs/: e2e_test_gaps.md  migration_plan.md  pins_switch_auxiliary_entries.md
fourward/prebuilt/: COMMIT  sai_middleblock.binpb
p4_infra/p4_pdpi/: p4_runtime_session.cc  p4_runtime_session_extras.cc
p4_infra/p4_runtime/: p4_runtime_session.cc  p4_runtime_session_extras.cc
sai_p4/fixed/: BUILD.bazel  metadata.p4  packet_io.p4  parser.p4  roles.h  routing.p4  v1model_sai.p4  vlan.p4
sai_p4/fixed/fourward/: BUILD.bazel  v1model.p4
sai_p4/instantiations/google/: acl_egress.p4  acl_ingress.p4  bitwidths.p4
