load("@fourward//bazel:fourward_pipeline.bzl", "fourward_pipeline")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

package(default_visibility = ["//visibility:public"])

# =============================================================================
# FourwardServer — RAII subprocess manager for 4ward P4Runtime servers
# =============================================================================

cc_library(
    name = "fourward_server",
    srcs = ["fourward_server.cc"],
    hdrs = ["fourward_server.h"],
    deps = [
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/time",
    ],
)

# =============================================================================
# FourwardSwitch — thinkit::Switch adapter for a 4ward server
# =============================================================================

cc_library(
    name = "fourward_switch",
    srcs = ["fourward_switch.cc"],
    hdrs = ["fourward_switch.h"],
    deps = [
        "@abseil-cpp//absl/status:statusor",
        "@grpc//:grpc++",
        "@openconfig_gnmi//proto/gnmi:gnmi_cc_grpc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
        "//thinkit:switch",
    ],
)

# =============================================================================
# Compiled SAI P4 middleblock for 4ward
# =============================================================================

# The v1model_sai.p4 include provides typed ports with @p4runtime_translation;
# its -I directory shadows stock v1model.p4. The other includes resolve
# roles.h, ids.h, bitwidths.p4, and the fixed/*.p4 files.
fourward_pipeline(
    name = "sai_middleblock_fourward",
    src = "//sai_p4/instantiations/google:middleblock.p4",
    extra_srcs = ["//sai_p4:sai_p4_srcs"],
    includes = [
        "//sai_p4/fixed:v1model_sai.p4",
        "//sai_p4/instantiations/google:ids.h",
    ],
)

# =============================================================================
# Tests
# =============================================================================

cc_test(
    name = "fourward_server_test",
    srcs = ["fourward_server_test.cc"],
    data = [
        "@fourward//p4runtime:p4runtime_server",
    ],
    deps = [
        ":fourward_server",
        "@abseil-cpp//absl/strings",
        "@bazel_tools//tools/cpp/runfiles",
        "@googletest//:gtest_main",
        "@grpc//:grpc++",
        "@p4runtime//proto/p4/v1:p4runtime_cc_grpc",
    ],
)
